--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,14 @@ body {
 }
 
 .app-container {
-  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
 }
+
+
 
 * {
   box-sizing: border-box;
